@@ -1587,6 +1587,12 @@ For game purposes, the races group into factions; for example, orcs often cooper
     [/label]
 
     [label]
+        x,y=4,10
+        text="This label is not immutable"
+        immutable="no"
+    [/label]
+
+    [label]
         x,y = 25,6
         text = "Let it snow"
     [/label]
